--- a/bro/templates/bro-daemonset.yaml
+++ b/bro/templates/bro-daemonset.yaml
@@ -22,6 +22,19 @@ spec:
         { "name": "{{ .Values.networks.passive }}" }
       ]'
     spec:
+      initContainers:
+      - name: verifynode
+        image: {{ .Values.images.runner }}
+        env:
+        - name: STARTUP_SCRIPT
+          value: |
+            #!/bin/bash
+            set -e
+            sleep 10
+            if [ ! -f /sys/class/net/net0/operstate ]; then
+            echo "Network interface 'net0' not found, exiting..."
+            exit 1
+            fi
       containers:
       - name: bro
         image: {{ .Values.images.bro }}
