--- a/bro/values.yaml
+++ b/bro/values.yaml
@@ -1,9 +1,10 @@
 # EDCOP Bro Chart values
 images:
   bro: gcr.io/edcop-public/bro:2
-  logstash: docker.elastic.co/logstash/logstash:6.2.4
+  logstash: docker.elastic.co/logstash/logstash:6.3.0
   redis: redis:4.0.9
-  filebeat: docker.elastic.co/beats/filebeat:6.2.4
+  filebeat: docker.elastic.co/beats/filebeat:6.3.0
+  runner: gcr.io/edcop-public/runner:8
 networks:
   # Overlay is the name of the default cni network
   overlay: calico
