Begin making changes to allow for bro packages to be installed using the package manager

--- a/bro/templates/bro-daemonset.yaml
+++ b/bro/templates/bro-daemonset.yaml
@@ -34,6 +34,9 @@ spec:
               - NET_RAW
           #runAsUser: 2001
           #fsGroup: 2001
+        env:
+          - name: "BRO_PACKAGES"
+            value: ({{- range .Values.broConfig.packages }} {{ . | title | quote }}{{- end }})
         resources:
           requests:
             cpu: "{{ .Values.broConfig.requests.cpu }}"
