--- a/bro/values.yaml
+++ b/bro/values.yaml
@@ -26,6 +26,12 @@ broConfig:
   pinCpus: 0
   #Set this to the number of cores you entered in pinCPUs, otherwise it will be ignored
   lbProcs: 0
+  #List out all the packages you would like to install from here https://github.com/bro/packages.  These packages will be installed before each instance of Bro is deployed
+  #NOTE: Currently requires access to the Internet
+  packages:
+    - bro/corelight/bro-xor-exe-plugin
+    - bro/sethhall/credit-card-exposure
+    - bro/sethhall/domain-tld
 logstashConfig:
   threads: 2 
   batchCount: 250
