--- a/bro/templates/bro-site-config.yaml
+++ b/bro/templates/bro-site-config.yaml
@@ -15,6 +15,9 @@ data:
     ##! Local site policy. Customize as appropriate.
     ##!
     ##! This file will not be overwritten when upgrading or reinstalling!
+    
+    #Load up packages
+    @load packages
 
     # This script logs which scripts were loaded during each run.
     @load misc/loaded-scripts
