--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -3,7 +3,8 @@
 FROM centos:latest
 RUN yum -y install epel-release
 RUN yum -y update && \
-        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel
+        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel git python-pip
+RUN pip install bro-pkg
 RUN     wget https://www.bro.org/downloads/bro-2.5.tar.gz && \
         tar xzf bro-2.5.tar.gz && \
         cd bro-2.5 && \
@@ -19,7 +20,7 @@ RUN cd /bro-2.5/aux/plugins && \
     make install && \
     cd /
         
-        
+ENV PATH="${PATH}:/usr/local/bro/bin/"        
 RUN yum upgrade
 RUN     yum -y install --enablerepo=C7.3.1611-base "kernel-devel-uname-r == $(uname -r)" && \
         git clone https://github.com/J-Gras/bro-af_packet-plugin.git && \
