--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -44,6 +44,9 @@ RUN chmod +x /startbro.sh
 RUN chmod +x /reset-network.sh
 #Used for allowing Bro to run as a regular user
 RUN /usr/local/bro/bin/broctl deploy
+RUN groupadd -g 2001 bro && \
+    useradd -u 2001 -g bro bro -d /usr/local/bro/logs/ && \
+    chown -R bro:bro /usr/local/bro/logs/ /usr/local/bro/lib/bro/plugins /usr/local/bro/share/bro/site
 #Needed to run as a non-privileged user
 RUN setcap cap_net_raw,cap_net_admin=eip /usr/local/bro/bin/bro
 WORKDIR /usr/local/bro/logs/
