--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,18 +1,18 @@
 FROM centos:latest AS build
 RUN yum -y install epel-release
 RUN yum -y update && \
-        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel git python-pip
+        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel git python-pip cmake
 RUN pip install bro-pkg
-RUN     wget https://www.bro.org/downloads/bro-2.5.tar.gz && \
-        tar xzf bro-2.5.tar.gz && \
-        cd bro-2.5 && \
+RUN     wget https://www.bro.org/downloads/bro-2.5.5.tar.gz && \
+        tar xzf bro-2.5.5.tar.gz && \
+        cd bro-2.5.5 && \
         #split the configure and make \
         ./configure && \
         make install 
 
-RUN cd /bro-2.5/aux/plugins && \
+RUN cd /bro-2.5.5/aux/plugins && \
     make build-redis && \
-    cd /bro-2.5/aux/plugins/redis && \
+    cd /bro-2.5.5/aux/plugins/redis && \
     ./configure && \
     make && \
     make install && \
@@ -23,18 +23,19 @@ RUN yum upgrade
 RUN     yum -y install --enablerepo=C7.3.1611-base "kernel-devel-uname-r == $(uname -r)" && \
         git clone https://github.com/J-Gras/bro-af_packet-plugin.git && \
         cd bro-af_packet-plugin && \
-        ./configure --bro-dist=/bro-2.5 && \
+        ./configure --bro-dist=/bro-2.5.5 && \
         make && \
         make install && \
         yum -y clean all
 
 FROM centos:latest
 RUN yum -y install epel-release
-RUN yum -y install supervisor git wget libpcap GeoIP gperftools hiredis python-pip tcpdump && \
+RUN yum -y install supervisor git wget libpcap GeoIP gperftools hiredis python-pip tcpdump cmake && \
     yum -y clean all && \
     mkdir -p /conf/{plugins,site} && \
     pip install bro-pkg && \
     yum -y remove python-pip
+RUN mkdir /bro-2.5 && wget https://www.bro.org/downloads/bro-2.5.5.tar.gz -O /bro-2.5
 COPY --from=build /usr/local/bro/ /usr/local/bro
 ADD startbro.sh /startbro.sh
 ADD reset-network.sh /reset-network.sh
