--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:latest AS build
 RUN yum -y install epel-release
 RUN yum -y update && \
-        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel git python-pip cmake
+        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel git python-pip cmake librdkafka librdkafka-devel
 RUN pip install bro-pkg
 RUN     wget https://www.bro.org/downloads/bro-2.5.5.tar.gz && \
         tar xzf bro-2.5.5.tar.gz && \
@@ -10,31 +10,18 @@ RUN     wget https://www.bro.org/downloads/bro-2.5.5.tar.gz && \
         ./configure && \
         make install 
 
-RUN cd /bro-2.5.5/aux/plugins && \
-    make build-redis && \
-    cd /bro-2.5.5/aux/plugins/redis && \
-    ./configure && \
-    make && \
-    make install && \
-    cd /
-        
-ENV PATH="${PATH}:/usr/local/bro/bin/"        
-RUN yum upgrade
-RUN     yum -y install --enablerepo=C7.3.1611-base "kernel-devel-uname-r == $(uname -r)" && \
-        git clone https://github.com/J-Gras/bro-af_packet-plugin.git && \
-        cd bro-af_packet-plugin && \
-        ./configure --bro-dist=/bro-2.5.5 && \
-        make && \
-        make install && \
-        yum -y clean all
-
 #here is where you can add all your packages.  Note that some packages require different build tools and therefore may require additional packages not otherwise found
 RUN PATH="${PATH}:/usr/local/bro/bin/"; bro-pkg autoconfig && \
-    bro-pkg install --force bro/sethhall/unknown-mime-type-discovery 
+    bro-pkg install --force bro/sethhall/unknown-mime-type-discovery && \
+    bro-pkg install --force bro/j-gras/bro-af_packet-plugin
+    #bro-pkg install --force bro/apache/metron-bro-plugin-kafka
+
+RUN echo "********Log files for Bro Packages*********" && \
+    if [ -d /root/.bro-pkg/logs/ ];then for i in $(find /root/.bro-pkg/logs/); do echo "***Bro Log file: $i"; cat $i; done;fi
 
 FROM centos:latest
 RUN yum -y install epel-release
-RUN yum -y install supervisor git wget libpcap GeoIP gperftools hiredis tcpdump cmake && \
+RUN yum -y install supervisor git wget libpcap GeoIP gperftools tcpdump cmake librdkafka iproute && \
     yum -y clean all && \
     mkdir -p /conf/{plugins,site} 
 COPY --from=build /usr/local/bro/ /usr/local/bro
