Allow the configuration of Bro Packages (#9)
* Update Jenkinsfile

* updated for single etc configs

* Moved to a multi-stage docker containers

* added yum clean all

* Updates for bro-pkg

* go

* Added environment variables

* update

* Updated to allow bro packages

* Changed documentation, updated the build process to allow for packages to be installed at Docker build time

* test

* Only installing Af-packet

--- a/bro/templates/bro-daemonset.yaml
+++ b/bro/templates/bro-daemonset.yaml
@@ -26,6 +26,9 @@ spec:
       - name: bro
         image: {{ .Values.images.bro }}
         imagePullPolicy: Always
+        env: 
+          - name: PACKAGES
+            value: "{{- range .Values.broConfig.packages }}{{ . | title }},{{- end }}"
         securityContext:
           capabilities:
             add:
@@ -49,8 +52,9 @@ spec:
           name: bro-logs 
         - mountPath: /usr/local/bro/etc/
           name: bro-etc-config 
-        - mountPath: /usr/local/bro/share/bro/site/
+        - mountPath: /usr/local/bro/share/bro/site/local.bro
           name: bro-site-config 
+          subPath: local.bro
         - mountPath: /usr/local/bro/spool/
           name: bro-spool
       
