--- a/bro/templates/bro-site-config.yaml
+++ b/bro/templates/bro-site-config.yaml
@@ -3,18 +3,13 @@ kind: ConfigMap
 metadata:
   name: {{ template "bro.fullname" . }}-site-config
 data:
-  local-logger.bro: |
-    ##! Local site policy loaded only by the logger if Bro is running as a cluster.
-  local-manager.bro: |
-    ##! Local site policy loaded only by the manager if Bro is running as a cluster.
-  local-proxy.bro: |
-    ##! Local site policy loaded only by the proxies if Bro is running as a cluster.
-  local-worker.bro: '##! Local site policy loaded only by the workers if Bro is running
-    as a cluster.'
   local.bro: |
     ##! Local site policy. Customize as appropriate.
     ##!
     ##! This file will not be overwritten when upgrading or reinstalling!
+    
+    #Load up packages
+    @load packages
 
     # This script logs which scripts were loaded during each run.
     @load misc/loaded-scripts
