Made changes to allow for host networking to be an option

--- a/bro/values.yaml
+++ b/bro/values.yaml
@@ -9,6 +9,8 @@ networks:
   overlay: calico
   # Passive is the name of the sriov interface
   passive: passive 
+  useHostNetworking: false  #If this option is set to true, the container will see all physical interfaces on the physical host it resides.  This has some security issues but can be useful in some situations. 
+  hostNetworkingInterface: eth0  #Only used with useHostNetworking is set to true.  Set this to the interface name of the adapter to listen on.
 nodeSelector:
   label: sensor
 broConfig:
@@ -28,10 +30,6 @@ broConfig:
   lbProcs: 0
   #List out all the packages you would like to install from here https://github.com/bro/packages.  These packages will be installed before each instance of Bro is deployed
   #NOTE: Currently requires access to the Internet
-  packages:
-    - bro/corelight/bro-xor-exe-plugin
-    - bro/sethhall/credit-card-exposure
-    - bro/sethhall/domain-tld
 logstashConfig:
   threads: 2 
   batchCount: 250
