--- a/bro/templates/bro-daemonset.yaml
+++ b/bro/templates/bro-daemonset.yaml
@@ -18,17 +18,27 @@ spec:
         release: {{ .Release.Name }}
       annotations:
         networks: '[
+        {{ if .Values.networks.useHostNetworking }}
+        { "name": "{{ .Values.networks.overlay }}" }
+        {{ else }}
         { "name": "{{ .Values.networks.overlay }}" },
         { "name": "{{ .Values.networks.passive }}" }
+        {{ end }}
       ]'
     spec:
+      {{ if .Values.networks.useHostNetworking }}hostNetwork: true{{ end }}
       containers:
       - name: bro
         image: {{ .Values.images.bro }}
         imagePullPolicy: Always
         env: 
-          - name: PACKAGES
-            value: "{{- range .Values.broConfig.packages }}{{ . | title }},{{- end }}"
+          {{ if .Values.networks.useHostNetworking }}
+          - name: INTERFACE
+            value: "{{ .Values.networks.hostNetworkingInterface }}"
+          {{ else }}
+          - name: INTERFACE
+            value: "net0"
+          {{ end }}
         securityContext:
           capabilities:
             add:
