--- a/bro/templates/bro-etc-config.yaml
+++ b/bro/templates/bro-etc-config.yaml
@@ -162,7 +162,11 @@ data:
     [worker-1]
     type=worker
     host=localhost
+    {{ if .Values.networks.useHostNetworking }}
+    interface=af_packet::{{ .Values.networks.hostNetworkingInterface }}
+    {{ else }}
     interface=af_packet::net0
+    {{ end }}
     {{ if .Values.broConfig.setCpuAffinity }}lb_method=custom
     lb_procs={{ .Values.broConfig.lbProcs }}
     pin_cpus={{ .Values.broConfig.pinCpus }}
