--- a/bro/templates/bro-daemonset.yaml
+++ b/bro/templates/bro-daemonset.yaml
@@ -45,11 +45,8 @@ spec:
               - NET_ADMIN 
               - SYS_NICE #Used for CPU pinning
               - NET_RAW
-          #runAsUser: 2001
-          #fsGroup: 2001
-        env:
-          - name: "BRO_PACKAGES"
-            value: ({{- range .Values.broConfig.packages }} {{ . | title | quote }}{{- end }})
+          runAsUser: 2001
+          fsGroup: 2001
         resources:
           requests:
             cpu: "{{ .Values.broConfig.requests.cpu }}"
