--- a/bro/values.yaml
+++ b/bro/values.yaml
@@ -4,6 +4,7 @@ images:
   logstash: docker.elastic.co/logstash/logstash:6.4.0
   redis: redis:4.0.9
   filebeat: docker.elastic.co/beats/filebeat:6.4.0
+  runner: gcr.io/edcop-public/runner:8
 networks:
   # Overlay is the name of the default cni network
   overlay: calico
