--- a/bro/templates/bro-daemonset.yaml
+++ b/bro/templates/bro-daemonset.yaml
@@ -52,7 +52,7 @@ spec:
       - name: bro
         image: {{ .Values.images.bro }}
         imagePullPolicy: Always
-        command: ["bash", "-c", "cp -R /tmp/bro /usr/local/bro/etc/ && /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf"]
+        command: ["bash", "-c", "cp -R /tmp/bro/* /usr/local/bro/etc/ && /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf"]
         securityContext:
           runAsUser: 2001
           fsGroup: 2001
@@ -77,7 +77,7 @@ spec:
         volumeMounts:
         - mountPath: /usr/local/bro/logs/
           name: bro-logs 
-        - mountPath: /tmp/bro
+        - mountPath: /tmp/bro/
           name: bro-etc-config 
         - mountPath: /usr/local/bro/share/bro/site/local.bro
           name: bro-site-config 
