--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -21,23 +21,30 @@ RUN echo "********Log files for Bro Packages*********" && \
 
 FROM centos:latest
 RUN yum -y install epel-release
-RUN yum -y install supervisor git wget libpcap GeoIP gperftools tcpdump cmake librdkafka iproute && \
+RUN yum -y install supervisor git wget libpcap GeoIP gperftools tcpdump cmake librdkafka iproute sendmail && \
     yum -y clean all && \
     mkdir -p /conf/{plugins,site} 
 COPY --from=build /usr/local/bro/ /usr/local/bro
+
 ADD startbro.sh /startbro.sh
 ADD reset-network.sh /reset-network.sh
 ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
 ENV PATH="/usr/local/bro/bin/:${PATH}"
 RUN chmod +x /startbro.sh
 RUN chmod +x /reset-network.sh
+
 #Used for allowing Bro to run as a regular user
 RUN /usr/local/bro/bin/broctl deploy
 RUN groupadd -g 2001 bro && \
     useradd -u 2001 -g bro bro -d /usr/local/bro/logs/ && \
     chown -R bro:bro /usr/local/bro/logs/ /usr/local/bro/lib/bro/plugins /usr/local/bro/share/bro/site /usr/local/bro/etc/ 
+
 #Needed to run as a non-privileged user
 RUN setcap cap_net_raw,cap_net_admin=eip /usr/local/bro/bin/bro
 RUN setcap cap_net_raw,cap_net_admin=eip /usr/sbin/tcpdump
+
+ENV INTERFACE=eth0
+
 WORKDIR /usr/local/bro/logs/
 CMD ["/usr/bin/supervisord","-c","/etc/supervisor/conf.d/supervisord.conf"]
