--- a/container/node.cfg
+++ b/container/node.cfg
@@ -13,7 +13,7 @@ host=localhost
 [worker-1]
 type=worker
 host=localhost
-interface=af_packet::net0
+interface=af_packet::${INTERFACE}
 lb_method=custom
 lb_procs=6
 pin_cpus=0,1,2,3,4,5
