Bro Secrets changes (#13)
* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Jenkinsfile

* run as a limited user

* run as a limited user

* run as a limited user

* run as a limited user

* Update logstash-bro-config.yaml

* Preparing for release 0.5.0

* added gitignore

* fixed up merge conflicts

* fixed merge conflicts

fixed

* Update bro-etc-config.yaml

updated to allow for single node

* Updated all changes

* Added back container

* Update README.md (#4)

* Update Jenkinsfile

* Lowering CPU and memory resources of Bro

* Update values.yaml

* Update Jenkinsfile

* Update Jenkinsfile

* Update bro-daemonset.yaml

* Added Bro Dashboards (#5)

Made it so that dashboards load into Kibana when Bro is launched.

* Update Bro Dashboard index (#6)

* Added Bro Dashboards

Made it so that dashboards load into Kibana when Bro is launched.

* Update bro-dashboard.yaml

* Update bro-dashboard.yaml

* Minor JSON spacing fixes (#7)

* Update bro-dashboard.yaml

* Update bro-dashboard.yaml

* Update bro-dashboard.yaml

* Update bro-dashboard.yaml

* update bro

* Update values.yaml

* Begin making changes to allow for bro packages to be installed using the package manager

* Allow the configuration of Bro Packages (#9)

* Update Jenkinsfile

* updated for single etc configs

* Moved to a multi-stage docker containers

* added yum clean all

* Updates for bro-pkg

* go

* Added environment variables

* update

* Updated to allow bro packages

* Changed documentation, updated the build process to allow for packages to be installed at Docker build time

* test

* Only installing Af-packet

* Allow for Hostnetworking to be used when needed. (#10)

* Update Jenkinsfile

* updated for single etc configs

* Moved to a multi-stage docker containers

* added yum clean all

* Updates for bro-pkg

* go

* Added environment variables

* upd

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,38 +1,50 @@
-#https://www.bro.org/sphinx/components/bro-plugins/redis/README.html
-# https://www.bro.org/sphinx/components/bro-plugins/README.html
-FROM centos:latest
+FROM centos:latest AS build
 RUN yum -y install epel-release
 RUN yum -y update && \
-        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel
-RUN     wget https://www.bro.org/downloads/bro-2.5.tar.gz && \
-        tar xzf bro-2.5.tar.gz && \
-        cd bro-2.5 && \
+        yum -y install sudo supervisor git cmake make gcc gcc-c++ flex bison libpcap-devel openssl-devel python-devel swig zlib-devel GeoIP-devel libpcap gperftools vim-minimal wget kernel-headers kernel-devel kernel hiredis-devel git python-pip cmake librdkafka librdkafka-devel
+RUN pip install bro-pkg
+RUN     wget https://www.bro.org/downloads/bro-2.5.5.tar.gz && \
+        tar xzf bro-2.5.5.tar.gz && \
+        cd bro-2.5.5 && \
         #split the configure and make \
         ./configure && \
         make install 
 
-RUN cd /bro-2.5/aux/plugins && \
-    make build-redis && \
-    cd /bro-2.5/aux/plugins/redis && \
-    ./configure && \
-    make && \
-    make install && \
-    cd /
-        
-        
-RUN yum upgrade
-RUN     yum -y install --enablerepo=C7.3.1611-base "kernel-devel-uname-r == $(uname -r)" && \
-        git clone https://github.com/J-Gras/bro-af_packet-plugin.git && \
-        cd bro-af_packet-plugin && \
-        ./configure --bro-dist=/bro-2.5 && \
-        make && \
-        make install && \
-        yum -y clean all
+#here is where you can add all your packages.  Note that some packages require different build tools and therefore may require additional packages not otherwise found.  Some packages require configuration as well.  If this is the case it is best to modify the configurations maps accordingly.
+RUN PATH="${PATH}:/usr/local/bro/bin/"; bro-pkg autoconfig && \
+    bro-pkg install --force bro/j-gras/bro-af_packet-plugin
+    #bro-pkg install --force bro/sethhall/unknown-mime-type-discovery && \
+    #bro-pkg install --force bro/apache/metron-bro-plugin-kafka
+
+RUN echo "********Log files for Bro Packages*********" && \
+    if [ -d /root/.bro-pkg/logs/ ];then for i in $(find /root/.bro-pkg/logs/); do echo "***Bro Log file: $i"; cat $i; done;fi
+
+FROM centos:latest
+RUN yum -y install epel-release
+RUN yum -y install supervisor git wget libpcap GeoIP gperftools tcpdump cmake librdkafka iproute sendmail && \
+    yum -y clean all && \
+    mkdir -p /conf/{plugins,site} 
+COPY --from=build /usr/local/bro/ /usr/local/bro
+
 ADD startbro.sh /startbro.sh
 ADD reset-network.sh /reset-network.sh
 ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+ENV PATH="/usr/local/bro/bin/:${PATH}"
 RUN chmod +x /startbro.sh
 RUN chmod +x /reset-network.sh
+
+#Used for allowing Bro to run as a regular user
 RUN /usr/local/bro/bin/broctl deploy
+RUN groupadd -g 2001 bro && \
+    useradd -u 2001 -g bro bro -d /usr/local/bro/logs/ && \
+    chown -R bro:bro /usr/local/bro/logs/ /usr/local/bro/lib/bro/plugins /usr/local/bro/share/bro/site /usr/local/bro/etc/ 
+
+#Needed to run as a non-privileged user
+RUN setcap cap_net_raw,cap_net_admin=eip /usr/local/bro/bin/bro
+RUN setcap cap_net_raw,cap_net_admin=eip /usr/sbin/tcpdump
+
+ENV INTERFACE=eth0
+
 WORKDIR /usr/local/bro/logs/
 CMD ["/usr/bin/supervisord","-c","/etc/supervisor/conf.d/supervisord.conf"]
