--- a/bro/templates/bro-etc-config.yaml
+++ b/bro/templates/bro-etc-config.yaml
@@ -91,6 +91,9 @@ data:
     # changes, and a value of 0 means do not send mail.
     MailHostUpDown = 1
     
+    # Send Mail
+    SendMail = /usr/sbin/sendmail
+    
     ###############################################
     # Logging Options
     
@@ -162,11 +165,7 @@ data:
     [worker-1]
     type=worker
     host=localhost
-    {{ if .Values.networks.useHostNetworking }}
-    interface=af_packet::{{ .Values.networks.hostNetworkingInterface }}
-    {{ else }}
-    interface=af_packet::net0
-    {{ end }}
+    interface=af_packet::${INTERFACE}
     {{ if .Values.broConfig.setCpuAffinity }}lb_method=custom
     lb_procs={{ .Values.broConfig.lbProcs }}
     pin_cpus={{ .Values.broConfig.pinCpus }}
