--- a/bro/values.yaml
+++ b/bro/values.yaml
@@ -1,16 +1,16 @@
 # EDCOP Bro Chart values
 images:
-  bro: gcr.io/edcop-dev/dlohin-bro:23
+  bro: gcr.io/edcop-dev/mike-bro:5
   logstash: docker.elastic.co/logstash/logstash:6.4.0
   redis: redis:4.0.9
   filebeat: docker.elastic.co/beats/filebeat:6.4.0
+  runner: gcr.io/edcop-public/runner:8
 networks:
   # Overlay is the name of the default cni network
   overlay: calico
   # Passive is the name of the sriov interface
   passive: passive 
-  useHostNetworking: false  #If this option is set to true, the container will see all physical interfaces on the physical host it resides.  This has some security issues but can be useful in some situations. 
-  hostNetworkingInterface: eth0  #Only used with useHostNetworking is set to true.  Set this to the interface name of the adapter to listen on.
+  useHostNetworking: false  
 nodeSelector:
   label: sensor
 broConfig:
