--- a/container/supervisord.conf
+++ b/container/supervisord.conf
@@ -2,4 +2,4 @@
 nodaemon=true
 
 [program:bro]
-command=/bin/bash -c "/usr/local/bro/bin/broctl deploy"
+command=/bin/bash -c "sed -i 's/${INTERFACE}/'$INTERFACE' /g' /usr/local/bro/etc/node.cfg && /usr/local/bro/bin/broctl deploy"
