--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -12,10 +12,10 @@ RUN     wget https://download.zeek.org/zeek-3.1.3.tar.gz && \
         make install 
 
 #here is where you can add all your packages.  Note that some packages require different build tools and therefore may require additional packages not otherwise found.  Some packages require configuration as well.  If this is the case it is best to modify the configurations maps accordingly.
-RUN PATH="${PATH}:/usr/local/zeek/bin/"; zkg autoconfig && \
-    zkg install --force zeek-af_packet-plugin
+RUN PATH=/usr/local/zeek/bin:"${PATH}"; zkg autoconfig # && \
+    #zkg install --force zeek-af_packet-plugin && \
     #zkg install --force zeek/sethhall/unknown-mime-type-discovery && \
-    #zkg install --force zeek/apache/metron-bro-plugin-kafka
+    #zkg install --force zeek/apache/metron-zeek-plugin-kafka || true
 
 RUN echo "********Log files for Bro Packages*********" && \
     if [ -d /root/.zkg/logs/ ];then for i in $(find /root/.zkg/logs/); do echo "***Zeek Log file: $i"; cat $i; done;fi
@@ -38,15 +38,15 @@ ENV INTERFACE=eth0
 RUN chmod +x /startbro.sh
 RUN chmod +x /reset-network.sh
 
-#Used for allowing Bro to run as a regular user
-RUN /usr/local/bro/bin/broctl deploy
-RUN groupadd -g 2001 bro && \
-    useradd -u 2001 -g bro bro -d /usr/local/bro/logs/ && \
-    chown -R bro:bro /usr/local/bro/logs/ /usr/local/bro/lib/bro/plugins /usr/local/bro/share/bro/site /usr/local/bro/etc/ 
+##Used for allowing Zeek to run as a regular user
+RUN /usr/local/zeek/bin/zeekctl deploy
+RUN groupadd -g 2001 zeek && \
+    useradd -u 2001 -g zeek zeek -d /usr/local/zeek/logs/ && \
+    chown -R zeek:zeek /usr/local/zeek/logs/ /usr/local/zeek/lib/zeek/plugins /usr/local/zeek/share/zeek/site /usr/local/zeek/etc/ 
 
 #Needed to run as a non-privileged user
-RUN setcap cap_net_raw,cap_net_admin=eip /usr/local/bro/bin/bro
+RUN setcap cap_net_raw,cap_net_admin=eip /usr/local/zeek/bin/zeek
 RUN setcap cap_net_raw,cap_net_admin=eip /usr/sbin/tcpdump
 
-WORKDIR /usr/local/bro/logs/
+WORKDIR /usr/local/zeek/logs/
 CMD ["/usr/bin/supervisord","-c","/etc/supervisor/conf.d/supervisord.conf"]
