Modified star and supervisord scripts

--- a/container/supervisord.conf
+++ b/container/supervisord.conf
@@ -1,5 +1,5 @@
 [supervisord]
 nodaemon=true
 
-[program:bro]
-command=/bin/bash -c "sed -i 's/${INTERFACE}/'$INTERFACE' /g' /usr/local/bro/etc/node.cfg && /usr/local/bro/bin/broctl deploy"
+[program:zeek]
+command=/bin/bash -c "sed -i 's/${INTERFACE}/'$INTERFACE' /g' /usr/local/zeek/etc/node.cfg && /usr/local/zeek/bin/zeekctl deploy"
