--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM centos:latest AS build
+FROM centos:8.1.1911 AS build
 
 #Version Number of Zeek
 ENV VERSION="3.1.3"
@@ -13,18 +13,19 @@ RUN     wget https://download.zeek.org/zeek-$VERSION.tar.gz && \
         cd zeek-$VERSION && \
         #split the configure and make \
         ./configure && \
-        make install 
-
+        make install
+# Add location of zeek config-file to path 
+ENV PATH="${PATH}:/usr/local/zeek/bin/" 
 #here is where you can add all your packages.  Note that some packages require different build tools and therefore may require additional packages not otherwise found.  Some packages require configuration as well.  If this is the case it is best to modify the configurations maps accordingly.
-RUN PATH=/usr/local/zeek/bin:"${PATH}"; zkg autoconfig # && \
-    #zkg install --force zeek-af_packet-plugin && \
-    #zkg install --force zeek/sethhall/unknown-mime-type-discovery && \
-    #zkg install --force zeek/apache/metron-zeek-plugin-kafka || true
+RUN zkg autoconfig && \
+    git clone https://github.com/J-Gras/zeek-af_packet-plugin.git && cd zeek-af_packet-plugin && ./configure --with-kernel=/usr/src/kernels/4.18.0-147.8.1.el8_1.x86_64 && make && make install && cd .. && \
+    #zkg install --force zeek/sethhall/unknown-mime-type-discovery
+    #zkg install --force zeek/apache/metron-bro-plugin-kafka || true
 
-RUN echo "********Log files for Bro Packages*********" && \
-    if [ -d /root/.zkg/logs/ ];then for i in $(find /root/.zkg/logs/); do echo "***Zeek Log file: $i"; cat $i; done;fi
+RUN echo "********Log files for Zeek Packages*********" && \
+    if [ -d /usr/.zkg/logs/ ];then for i in $(find /usr/.zkg/logs/); do echo "***Zeek Log file: $i"; cat $i; done;fi
 
-FROM centos:latest
+FROM centos:8.1.1911
 RUN yum -y install epel-release
 RUN yum -y install supervisor git wget libpcap GeoIP gperftools tcpdump cmake librdkafka iproute sendmail && \
     yum -y clean all && \
@@ -36,13 +37,13 @@ ADD startbro.sh /startbro.sh
 ADD reset-network.sh /reset-network.sh
 ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-ENV PATH="/usr/local/bro/bin/:${PATH}"
+ENV PATH="/usr/local/zeek/bin/:${PATH}"
 ENV INTERFACE=eth0
 
 RUN chmod +x /startbro.sh
 RUN chmod +x /reset-network.sh
 
-##Used for allowing Zeek to run as a regular user
+#Used for allowing Zeek to run as a regular user
 RUN /usr/local/zeek/bin/zeekctl deploy
 RUN groupadd -g 2001 zeek && \
     useradd -u 2001 -g zeek zeek -d /usr/local/zeek/logs/ && \
