Updated Dockerfile for sane Defaults

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -18,7 +18,7 @@ RUN     wget https://download.zeek.org/zeek-$VERSION.tar.gz && \
 ENV PATH="${PATH}:/usr/local/zeek/bin/" 
 #here is where you can add all your packages.  Note that some packages require different build tools and therefore may require additional packages not otherwise found.  Some packages require configuration as well.  If this is the case it is best to modify the configurations maps accordingly.
 RUN zkg autoconfig && \
-    git clone https://github.com/J-Gras/zeek-af_packet-plugin.git && cd zeek-af_packet-plugin && ./configure --with-kernel=/usr/src/kernels/4.18.0-147.8.1.el8_1.x86_64 && make && make install && cd .. && \
+    git clone https://github.com/J-Gras/zeek-af_packet-plugin.git && cd zeek-af_packet-plugin && ./configure --with-kernel=/usr/src/kernels/4.18.0-147.8.1.el8_1.x86_64 && make && make install && cd ..
     #zkg install --force zeek/sethhall/unknown-mime-type-discovery
     #zkg install --force zeek/apache/metron-bro-plugin-kafka || true
 
@@ -42,9 +42,7 @@ ENV INTERFACE=eth0
 
 RUN chmod +x /startbro.sh
 RUN chmod +x /reset-network.sh
-
-#Used for allowing Zeek to run as a regular user
-RUN /usr/local/zeek/bin/zeekctl deploy
+RUN sed -i "s/eth0/${INTERFACE}/g" /usr/local/zeek/etc/node.cfg
 RUN groupadd -g 2001 zeek && \
     useradd -u 2001 -g zeek zeek -d /usr/local/zeek/logs/ && \
     chown -R zeek:zeek /usr/local/zeek/logs/ /usr/local/zeek/lib/zeek/plugins /usr/local/zeek/share/zeek/site /usr/local/zeek/etc/ 
